# openfix-rs

./: .envrc  .gitignore  README.md  flake.nix
example/custom-dict/: Cargo.toml
openfix-messages/: Cargo.toml  build.rs
openfix-messages/benches/: deserialize.rs  serialize_empty_trailers.rs
openfix-messages/src/: dec_helpers.rs  enc_helpers.rs  fix_versions.rs  lib.rs
openfix-messages/tests/it/: deserialize.rs  helpers.rs  main.rs  serialize_empty_trailers.rs  serialize_with_trailers.rs
openfix-spec-generator/: Cargo.toml
openfix-spec-generator/src/: lib.rs
