[package]
name = "custom-dict"
version = "0.1.0"
authors = ["Arthur LE MOIGNE <arthur.lemoigne@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
openfix-messages = { path = "../../openfix-messages", features = [ "fix44" ] }
typed-builder = "0.10"

[build-dependencies]
openfix-spec-generator = { path = "../../openfix-spec-generator" }